# rustos

./: Cargo.toml  Makefile  README.md  makefile
src/: allocator.rs  gdt.rs  interrupts.rs  keyboard.rs  lib.rs  main  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/memory/: mod.rs  paging.rs
src/memory/heap/: bitmap_allocator.rs  linked_list_allocator.rs  mod.rs
tests/: exception-breakpoint.rs  exception-divide-by-zero.rs  exception-double-fault-stack-overflow.rs  exception-page-fault.rs  interrupt-syscall.rs  panic.rs  test-basic-boot.rs  test-exception-breakpoint.rs  test-exception-divide-by-zero.rs  test-exception-double-fault-stack-overflow.rs  test-exception-page-fault.rs  test-interrupt-syscall.rs
