[package]
name = "rust_os"
version = "0.1.0"
authors = ["Seth Butler <seth.butler@ibm.com>"]

[dependencies]
bootloader = { version = "0.8.0", features = ["recursive_page_table"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.9.6"
uart_16550 = "0.2.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.8.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
array-init = "^0.0.4"

[profile.dev]
panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort" # disable stack unwinding on panic

[package.metadata.bootimage]
default-target = "x86_64-rust_os.json"  # sets default target for bootimage command
