[package]
name = "rust_os"
version = "0.1.0"
authors = ["Seth Butler <seth.butler@ibm.com>"]
edition = "2018"

[dependencies]
bootloader = { version = "0.8.9", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.9.6"
uart_16550 = "0.2.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.8.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
array-init = "^0.0.4"

[profile.dev]
panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort" # disable stack unwinding on panic

[package.metadata.bootimage]
default-target = "x86_64-rust_os.json"  # sets default target for bootimage command
test-args = [
    # isa-debug-exit: qemu device allowing exiting from system
    # iobase: port address for device (port mapped I/O)
    # iosize: portsize: 0x04 == 4 bytes
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    # redirects test serial output to stdio
    "-serial", "stdio",
    # tells qemu not to create a display
    "-display", "none"
]
# maps a specified exit code to the exit code 0
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300          # (in seconds)


[[test]]
name = "test-panic"
harness = false
